metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormQuestionsAnswers__c/Calendly__CalendlyRoutingFormQuestionsAnswers__c.object-meta.xml
<CustomObject>
    <label>CalendlyRoutingFormQuestionsAnswers</label>
    <nameField>
        <label>CalendlyRoutingFormQuestionsAnswers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalendlyRoutingFormQuestionsAnswers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>