metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormQuestionsAnswers__c/fields/Calendly__Answer__c.field-meta.xml
<CustomField>
    <fullName>Calendly__Answer__c</fullName>
    <label>Answer</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>