metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormQuestionsAnswers__c/fields/Calendly__CalendlyRoutingFormSubmission__c.field-meta.xml
<CustomField>
    <fullName>Calendly__CalendlyRoutingFormSubmission__c</fullName>
    <label>CalendlyRoutingFormSubmission</label>
    <referenceTo>Calendly__CalendlyRoutingFormSubmission__c</referenceTo>
    <relationshipLabel>CalendlyRoutingFormQuestionsAnswers</relationshipLabel>
    <relationshipName>CalendlyRoutingFormQuestionsAnswers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>