metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormQuestionsAnswers__c/fields/Calendly__Question__c.field-meta.xml
<CustomField>
    <fullName>Calendly__Question__c</fullName>
    <label>Question</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>