metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormQuestionsAnswers__c/fields/Calendly__Type__c.field-meta.xml
<CustomField>
    <fullName>Calendly__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>