metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyRoutingFormQuestionsAnswers__c/listViews/Calendly__All.listView-meta.xml
<ListView>
    <fullName>Calendly__All</fullName>
    <columns>NAME</columns>
    <columns>Calendly__Question__c</columns>
    <columns>Calendly__Answer__c</columns>
    <columns>Calendly__Type__c</columns>
    <columns>Calendly__CalendlyRoutingFormSubmission__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>